# agentic-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
agentic_pre_commit_hooks/: check_agentic_api_spec_documents.py  check_readme_sync.py
pre_commit_hooks/: __init__.py  check_agentic_api_spec_documents.py
tests/: test_hook.py
