[project]
name = "agentic-pre-commit-hooks"
version = "0.1.0"
description = "Analyse code base and identify any APIs defined and ensure they are documented in the API spec file"
authors = [
    {name = "Ben Greene",email = "BenJGreene@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click (>=8.3.2,<9.0.0)"
]

[project.scripts]
check-agentic-api-spec = "agentic_pre_commit_hooks.check_agentic_api_spec_documents:main"
check-readme-sync = "agentic_pre_commit_hooks.check_readme_sync:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
